--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<meta name="revisit-after" content="1 days" />
 	<meta name="creator" content="Kumar Anirudha [anistark] (anirudha@blockchainedindia.com)" />
 	<meta name="publisher" content="Kumar Anirudha [anistark] anirudha.org" />
-	<meta http-equiv="refresh" content="0; url=https://skillenza.com">
-	<title>Blockchained India</title>
+	<meta http-equiv="refresh" content="0; url=skillenza.com">
+	<title>Skillenza</title>
 </head>
 <body>
     <h1>Skillenza</h1>
