--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="revisit-after" content="1 days" />
 	<meta name="creator" content="Kumar Anirudha [anistark] (anirudha@blockchainedindia.com)" />
 	<meta name="publisher" content="Kumar Anirudha [anistark] anirudha.org" />
-	<meta http-equiv="refresh" content="0; url=http://skillenza.com">
+	<meta http-equiv="refresh" content="0; url=https://beta.skillenza.com">
 	<title>Skillenza</title>
 </head>
 <body>
