--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <head>
 	<meta name="language" content="en-us" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description"
-		  content="Skillenza" />
-	<meta name="keywords"
-		  content="skillenza,anistark,venturesity,kumar,anirudha" />
+	<meta name="description" content="Skillenza" />
+	<meta name="keywords" content="skillenza,anistark,venturesity,kumar,anirudha" />
 	<meta name="classification" content="skillenza,community,india,bangalore,meetup" />
 	<meta name="distribution" content="Global" />
 	<meta name="rating" content="General" />
 	<meta name="robots" content="index, follow" />
 	<meta name="revisit-after" content="1 days" />
-	<meta name="creator" content="Kumar Anirudha [anistark] (anirudha@blockchainedindia.com)" />
+	<meta name="creator" content="Kumar Anirudha [anistark] (anirudhastark@yahoo.com)" />
 	<meta name="publisher" content="Kumar Anirudha [anistark] anirudha.org" />
 	<meta http-equiv="refresh" content="0; url=https://beta.skillenza.com">
 	<title>Skillenza</title>
