--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="revisit-after" content="1 days" />
 	<meta name="creator" content="Kumar Anirudha [anistark] (anirudhastark@yahoo.com)" />
 	<meta name="publisher" content="Kumar Anirudha [anistark] anirudha.org" />
-	<meta http-equiv="refresh" content="0; url=https://skillenza.com">
+	<meta http-equiv="refresh" content="0; url=https://beta.skillenza.com">
 	<title>Skillenza</title>
 </head>
 <body>
